# stateless-MCP

./: LICENSE  README.md
mcp-host/: pyproject.toml
mcp-host/src/mcp_host/: __init__.py  config.py  lifespan.py  main.py  models.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/mcp_server/: __init__.py  server.py
