[project]
name = "mcp-host"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TerminalMan", email = "84923604+SecretiveShell@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "mcp>=1.2.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
mcp-host = "mcp_host:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
